@startuml

title __STORE's Class Diagram__\n

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.store {
      class InstrumentPriceMapStore {
          - name : String
          - internalStore : ConcurrentMap<K, V>
          + InstrumentPriceMapStore()
          + getName()
          + get()
          + getAll()
          + addOrUpdatePrice()
          + delete()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.store {
      interface Store {
          {abstract} + get()
          {abstract} + getAll()
          {abstract} + addOrUpdatePrice()
          {abstract} + delete()
      }
    }
  }
  

  InstrumentPriceMapStore -up-|> Store
  InstrumentPriceMapStore o-- K : instrumentPriceKey


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
